Fix flash z-index

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -71,11 +71,10 @@ header {
   height: 64px;
   line-height: 64px;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   padding: 0 20px;
   background-color: #333;
-  box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
 }
 
 .header-logo {
@@ -133,7 +132,7 @@ header {
   text-align: center;
   position: absolute;
   top: 64px;
-  z-index: 10;
+  z-index: 1;
   width: 100%;
   border-radius: 0 0 2px 2px;
   font-size: 14px;
